--- a/css/common.css
+++ b/css/common.css
@@ -5,7 +5,6 @@
 /* 공통 */
 
 body {
-  background-color: gray;
   font-family: "Pretendard";
 }
 a {
@@ -15,6 +14,11 @@ a {
 
 /* 헤더 */
 
+header {
+  position: fixed;
+  width: 100%;
+  z-index: 100;
+}
 header .black_box {
   content: "bg";
   display: block;
@@ -103,20 +107,12 @@ header .lang_box a {
   letter-spacing: normal;
   text-align: center;
   box-sizing: border-box;
-}
-header .lang_box a:first-child {
-  color: #0014ba;
-  background-color: rgb(255, 255, 255);
-}
-header .lang_box a:last-child {
   color: rgba(255, 255, 255, 0.5);
   background-color: black;
   border: 1px solid rgba(255, 255, 255, 0.5);
 }
-
-/* 메인 */
-
-main {
-  width: 100%;
-  height: 2000px;
+header .lang_box a.on {
+  color: #0014ba;
+  background-color: rgb(255, 255, 255);
+  border: 1px solid transparent;
 }
