--- a/css/index.css
+++ b/css/index.css
@@ -67,9 +67,51 @@
 .main_section1 .text_box h2:first-child {
   font-size: 11.25em;
   margin-bottom: 30px;
+  -webkit-text-stroke: 1px #fff;
+  color: transparent;
+  animation-name: mainTitle1, fillText;
+  animation-duration: 1s, 3s;
+  animation-iteration-count: 1;
+  background-image: url(../img/main/white.svg);
+  -webkit-background-clip: text;
+  background-repeat: no-repeat;
+}
+@keyframes mainTitle1 {
+  0% {
+    opacity: 0;
+    transform: translateY(100px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+@keyframes fillText {
+  0% {
+    background-position-y: 160px;
+  }
+  20% {
+    background-position-y: 160px;
+  }
+  100% {
+    background-position-y: 0px;
+  }
 }
 .main_section1 .text_box h2:last-child {
   font-size: 7.5em;
+  animation-name: mainTitle2;
+  animation-duration: 1s;
+  animation-iteration-count: 1;
+}
+@keyframes mainTitle2 {
+  0% {
+    opacity: 0;
+    transform: translateY(120px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
 }
 
 .main_section1 .scroll_down {
@@ -106,6 +148,40 @@
 /* 섹션2 */
 
 .main_section2 {
+  position: relative;
   background-color: #09001d;
   height: 1340px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.main_section2 .top_hand {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.main_section2 .text_box .semi_title {
+  font-size: 3em;
+  font-weight: 600;
+  line-height: 1.2;
+  letter-spacing: normal;
+  text-align: center;
+  color: #1350ff;
+}
+.main_section2 .text_box .title {
+  font-size: 6.25em;
+  font-weight: 800;
+  line-height: 1.2;
+  letter-spacing: normal;
+  text-align: center;
+  color: #fff;
+  margin: 20px 0;
+}
+.main_section2 .text_box .text {
+  font-size: 2em;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: -1.6px;
+  text-align: center;
+  color: #fff;
 }
