--- a/css/index.css
+++ b/css/index.css
@@ -116,6 +116,7 @@
 
 .main_section1 .scroll_down {
   position: absolute;
+  z-index: 99;
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
@@ -189,4 +190,130 @@
   letter-spacing: -1.6px;
   text-align: center;
   color: #fff;
+}
+
+/* 섹션3 */
+
+.main_section3 {
+  position: relative;
+  height: 800px;
+  background-color: #09001d;
+  padding: 170px 0 435px;
+  box-sizing: border-box;
+}
+.main_section3 .bg_box {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  clip-path: inset(40%);
+  transform: translateY(-678px);
+}
+.main_section3 .blur {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 800px;
+}
+.main_section3 .blur > div {
+  width: 20%;
+  height: 20%;
+  background-color: transparent;
+  transform: translateY(-358px);
+  margin: 0 auto;
+  box-shadow: 0px 0px 40px rgb(215, 239, 255);
+}
+.main_section3 .text_box {
+  position: relative;
+  z-index: 1;
+  max-width: 1640px;
+  margin: 0 auto;
+  transform: translateX(50px);
+  opacity: 0;
+}
+.main_section3 .text_box .title {
+  font-size: 3em;
+  font-weight: 600;
+  line-height: 1.3;
+  letter-spacing: -2.4px;
+  text-align: left;
+  color: #fff;
+  margin-bottom: 40px;
+}
+.main_section3 .text_box .text {
+  font-size: 1.125em;
+  font-weight: 300;
+  line-height: 1.7;
+  letter-spacing: -0.9px;
+  text-align: left;
+  color: #fff;
+}
+.main_section3 .count_box {
+  width: 100%;
+  max-width: 1760px;
+  background: #0014ba;
+  height: 310px;
+  position: absolute;
+  bottom: -120px;
+  display: flex;
+  align-items: center;
+  padding: 0 160px;
+  box-sizing: border-box;
+  transform: translateX(-100%);
+  transition: 0.5s;
+}
+.main_section3 .count_box span {
+  color: white;
+}
+.main_section3 .count_box ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+.main_section3 .count_box li {
+  display: flex;
+  flex-direction: column;
+}
+.main_section3 .count_box .title {
+  font-size: 1.25em;
+  font-weight: 300;
+  line-height: 1.2;
+  letter-spacing: -1px;
+  text-align: left;
+  color: rgba(255, 255, 255, 0.6);
+  margin-bottom: 10px;
+}
+.main_section3 .count_box .sub_title {
+  font-size: 2em;
+  font-weight: 600;
+  line-height: 1.2;
+  letter-spacing: -1.6px;
+  text-align: left;
+  color: #fff;
+  margin-bottom: 40px;
+}
+.main_section3 .count_box .year {
+  font-size: 4.2rem;
+  font-weight: 700;
+  line-height: 1.2;
+  letter-spacing: normal;
+  text-align: left;
+  color: #fff;
+}
+.main_section3 .count_box .count {
+  font-size: 2em;
+  font-weight: 600;
+  line-height: 1.2;
+  letter-spacing: -1.5px;
+  text-align: left;
+  color: #fff;
+}
+
+/* 섹션4 */
+
+.main_section4 {
+  height: 2000px;
+  background-color: #e5d9ff;
 }
