--- a/css/index.css
+++ b/css/index.css
@@ -382,3 +382,107 @@
   opacity: 0;
   transition: 1s;
 }
+
+/* 섹션5 */
+
+.main_section5 {
+  position: relative;
+  display: flex;
+  align-items: center;
+  height: 940px;
+}
+.main_section5 .bg_box {
+  position: absolute;
+  width: 100%;
+  overflow: hidden;
+  display: flex;
+}
+.main_section5 .text_box {
+  position: relative;
+  z-index: 1;
+  width: 50%;
+  padding-right: 100px;
+}
+.main_section5 .text_box .sub_title {
+  font-size: 3.75em;
+  font-weight: 700;
+  line-height: 1.2;
+  letter-spacing: -3px;
+  text-align: right;
+  color: #fff;
+  margin-bottom: 10px;
+}
+.main_section5 .text_box .title {
+  font-size: 4.5em;
+  font-weight: 700;
+  line-height: 1.2;
+  letter-spacing: -3.6px;
+  text-align: right;
+  color: #fff;
+}
+.main_section5 .right_box {
+  position: relative;
+  z-index: 1;
+  width: 50%;
+  top: 240px;
+}
+.main_section5 .right_box .text {
+  font-size: 1.875em;
+  font-weight: 500;
+  line-height: 1.4;
+  letter-spacing: -1.5px;
+  text-align: left;
+  color: #fff;
+  margin-bottom: 20px;
+}
+.main_section5 .right_box .semi_text {
+  font-size: 1.125em;
+  font-weight: 300;
+  line-height: 1.4;
+  letter-spacing: -0.9px;
+  text-align: left;
+  color: rgba(255, 255, 255, 0.8);
+}
+
+/* 섹션6 */
+
+.main_section6 {
+  position: relative;
+  width: 100%;
+  height: 845px;
+  background-color: #09001d;
+}
+
+.main_section6 .bg_box {
+  position: absolute;
+  width: 100%;
+  overflow: hidden;
+  display: flex;
+  clip-path: inset(30%);
+  transform: translate(424px, -940px);
+}
+.main_section6 .text_box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 1;
+  transform: translate(-50%);
+}
+.main_section6 .text_box .title {
+  font-size: 3.75em;
+  font-weight: 700;
+  line-height: 1.2;
+  letter-spacing: -3px;
+  text-align: center;
+  color: #fff;
+  margin-bottom: 30px;
+}
+.main_section6 .text_box .text {
+  font-size: 1.5em;
+  font-weight: 300;
+  line-height: 1.6;
+  letter-spacing: -1.2px;
+  text-align: center;
+  color: #fff;
+  margin-bottom: 120px;
+}
