--- a/css/index.css
+++ b/css/index.css
@@ -449,10 +449,9 @@
 .main_section6 {
   position: relative;
   width: 100%;
-  height: 845px;
+  height: 942px;
   background-color: #09001d;
 }
-
 .main_section6 .bg_box {
   position: absolute;
   width: 100%;
@@ -461,12 +460,17 @@
   clip-path: inset(30%);
   transform: translate(424px, -940px);
 }
+.main_section6 .bg_box {
+  height: 942px;
+}
 .main_section6 .text_box {
   position: absolute;
-  top: 50%;
+  top: 350px;
   left: 50%;
   z-index: 1;
-  transform: translate(-50%);
+  transform: translate(-50%, 20%);
+  opacity: 0;
+  transition: 1s;
 }
 .main_section6 .text_box .title {
   font-size: 3.75em;
@@ -485,4 +489,133 @@
   text-align: center;
   color: #fff;
   margin-bottom: 120px;
+}
+.main_section6 .logo_box {
+  position: absolute;
+  top: 130px;
+  left: 50%;
+}
+.main_section6 .logo_box.stroke {
+  opacity: 0;
+  transform: translateY(20%);
+  transition: 1s;
+}
+.main_section6 .logo_box.stroke.on {
+  opacity: 1;
+  transform: translateY(0%);
+}
+.main_section6 .logo_box.stroke img {
+  clip-path: inset(0 0 0 0);
+  transition: 0.7s;
+}
+.main_section6 .logo_box.stroke img.on {
+  clip-path: inset(0 0 100% 0);
+  transition: 0.7s;
+}
+.main_section6 .logo_box.fill img {
+  clip-path: inset(100% 0 0 0);
+  transition: 0.7s;
+}
+.main_section6 .logo_box.fill img.on {
+  clip-path: inset(0% 0 0 0);
+}
+.main_section6 .logo_box img {
+  position: relative;
+  left: -50%;
+}
+
+/* 섹션7 */
+
+.main_section7 {
+  height: 920px;
+  overflow: hidden;
+}
+.main_section7 ul {
+  display: flex;
+  height: 100%;
+}
+.main_section7 li {
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+.main_section7 .bg_box {
+  position: absolute;
+  height: calc(100% + 1px);
+  overflow: hidden;
+}
+.main_section7 .text_box,
+.main_section7 .group-list {
+  position: relative;
+  z-index: 1;
+  padding: 70px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+}
+.main_section7 .text_box .num {
+  font-size: 1.25em;
+  font-weight: 700;
+  line-height: 1.2;
+  letter-spacing: normal;
+  text-align: left;
+  color: #fffefe;
+}
+.main_section7 .text_box .title {
+  font-size: 2.625em;
+  font-weight: 700;
+  line-height: 1.3;
+  letter-spacing: -2.1px;
+  text-align: left;
+  color: #fff;
+  margin-bottom: 20px;
+}
+.main_section7 .text_box .text {
+  font-size: 1.125em;
+  font-weight: 300;
+  line-height: 1.7;
+  letter-spacing: -0.9px;
+  text-align: left;
+  color: rgba(255, 255, 255, 0.8);
+}
+.main_section7 .group-list > div {
+  width: fit-content;
+  margin-top: 20px;
+}
+.main_section7 .group-list a {
+  font-size: 1.375em;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: -1.1px;
+  text-align: left;
+  color: #fff;
+  transition: 0.3s;
+  transition: 0.3s;
+  width: fit-content;
+}
+.main_section7 .group-list .line {
+  width: 0%;
+  height: 3px;
+  background-color: white;
+  margin-top: 1px;
+  transition: 0.3s;
+}
+.main_section7 .group-list > div:hover .line {
+  width: 100%;
+}
+.main_section7 .card {
+  filter: brightness(0.3);
+  transition: 0.3s;
+}
+.main_section7 .card.hover {
+  filter: brightness(1);
+}
+
+/* 섹션8 */
+
+.main_section8 {
+  background-color: #0014ba;
+  height: 2000px;
 }
