--- a/css/index.css
+++ b/css/index.css
@@ -616,6 +616,6 @@
 /* 섹션8 */
 
 .main_section8 {
-  background-color: #0014ba;
-  height: 2000px;
+  background-color: #09001d;
+  height: 1270px;
 }
