--- a/css/common.css
+++ b/css/common.css
@@ -136,3 +136,90 @@ header .lang_box a.on {
   background-color: rgb(255, 255, 255);
   border: 1px solid transparent;
 }
+
+/* 푸터 */
+
+footer {
+  background-color: #0014ba;
+}
+footer .container {
+  margin: 0 auto;
+  max-width: 1640px;
+  padding: 100px 20px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+}
+footer .left .top {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 100px;
+}
+footer .sns_box {
+  display: flex;
+  gap: 20px;
+}
+footer .sns_box img {
+  filter: invert(100%);
+}
+footer .term_box {
+  display: flex;
+  gap: 20px;
+}
+footer .term_box a {
+  font-size: 1em;
+  font-weight: 300;
+  line-height: 1;
+  letter-spacing: normal;
+  text-align: left;
+  color: #fff;
+}
+footer .left .bottom li {
+  display: flex;
+  margin-bottom: 20px;
+}
+footer .left .bottom span {
+  display: flex;
+  font-size: 1em;
+  font-weight: 300;
+  line-height: 1;
+  letter-spacing: normal;
+  text-align: left;
+  color: white;
+}
+footer .left .bottom .subject {
+  min-width: 80px;
+  color: rgba(255, 255, 255, 0.4);
+}
+footer .right {
+  display: flex;
+  gap: 30px;
+  width: 50%;
+}
+footer .right .nav_list {
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+footer .right .nav_list .depth1 a {
+  font-size: 1.125em;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: normal;
+  text-align: left;
+  color: rgba(255, 255, 255, 0.8);
+}
+footer .right .nav_list .depth2 a {
+  font-size: 1em;
+  font-weight: 300;
+  line-height: 1.2;
+  letter-spacing: normal;
+  text-align: left;
+  color: rgba(255, 255, 255, 0.3);
+  margin-bottom: 22px;
+}
+footer .right .nav_list .depth2 a:hover {
+  color: rgba(255, 255, 255, 0.8);
+}
