--- a/css/index.css
+++ b/css/index.css
@@ -454,14 +454,18 @@
 }
 .main_section6 .bg_box {
   position: absolute;
-  width: 100%;
+  width: 600px;
   overflow: hidden;
   display: flex;
-  clip-path: inset(30%);
-  transform: translate(424px, -940px);
-}
-.main_section6 .bg_box {
+  transform: translate(52vw, -106%);
   height: 942px;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.main_section6 .bg_box img {
+  clip-path: inset(30%);
 }
 .main_section6 .text_box {
   position: absolute;
@@ -554,6 +558,9 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
+  transition: 1s;
+  transform: translateX(-50px);
+  opacity: 0;
 }
 .main_section7 .text_box .num {
   font-size: 1.25em;
@@ -616,6 +623,171 @@
 /* 섹션8 */
 
 .main_section8 {
+  position: relative;
   background-color: #09001d;
   height: 1270px;
+  display: flex;
+  justify-self: center;
+}
+.main_section8 .container {
+  max-width: 1640px;
+  width: 100%;
+  padding: 240px 20px;
+  margin: 0 auto;
+  box-sizing: border-box;
+}
+.main_section8 .text_box {
+  display: flex;
+  align-items: flex-end;
+  gap: 40px;
+  margin-bottom: 200px;
+}
+.main_section8 .text_box .title {
+  font-size: 3.75em;
+  font-weight: 800;
+  line-height: 1.2;
+  letter-spacing: normal;
+  text-align: left;
+  color: #fff;
+}
+.main_section8 .text_box a {
+  font-size: 1em;
+  font-weight: 700;
+  line-height: 1.2;
+  letter-spacing: normal;
+  text-align: center;
+  color: #fff;
+  position: relative;
+  width: fit-content;
+  padding-bottom: 15px;
+}
+.main_section8 .text_box a::before {
+  content: "";
+  width: 20%;
+  height: 3px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background: #fff;
+  transition: 0.3s;
+}
+.main_section8 .text_box a:hover::before {
+  width: 100%;
+}
+.main_section8 .list {
+  display: flex;
+  flex-wrap: wrap;
+}
+.main_section8 .list li {
+  position: relative;
+  width: 50%;
+  padding-right: 60px;
+  margin-bottom: 100px;
+  box-sizing: border-box;
+}
+.main_section8 .list li a {
+  display: block;
+  transition: 0.5s;
+  cursor: none;
+}
+.main_section8 .list li:hover a {
+  transform: translateX(30px);
+}
+.main_section8 .list li::before {
+  content: "";
+  width: 3px;
+  height: 0%;
+  background: #0014ba;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: 0.6s;
+}
+.main_section8 .list li:hover::before {
+  height: 100%;
+}
+.main_section8 .list li::before {
+  content: "";
+  width: 3px;
+  height: 0%;
+  background: #0014ba;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: 0.6s;
+}
+.main_section8 .list .top .corp-name {
+  font-size: 1.25em;
+  font-weight: 600;
+  line-height: 1.2;
+  letter-spacing: -1px;
+  text-align: left;
+  color: #fff;
+  margin-right: 20px;
+}
+.main_section8 .list .top .date {
+  font-size: 1.125em;
+  font-weight: 300;
+  line-height: 1.2;
+  letter-spacing: normal;
+  text-align: left;
+  color: rgba(255, 255, 255, 0.2);
+}
+.main_section8 .list .title {
+  font-size: 1.75em;
+  font-weight: 700;
+  line-height: 1.2;
+  letter-spacing: -1.4px;
+  text-align: left;
+  color: #fff;
+  margin-bottom: 20px;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+}
+.main_section8 .list .text {
+  font-size: 1.125em;
+  font-weight: 300;
+  line-height: 1.7;
+  letter-spacing: normal;
+  text-align: left;
+  color: rgba(255, 255, 255, 0.5);
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+/* 커서 */
+
+#cursor {
+  position: absolute;
+  pointer-events: none;
+  z-index: 100;
+  transform: scale(0);
+  transition: all 0.5s ease;
+  transition-property: opacity, transform;
+  opacity: 0;
+  cursor: none;
+}
+#cursor.hover {
+  transform: scale(1);
+  opacity: 1;
+  /* cursor: none; */
+}
+#cursor img {
+  position: absolute;
+  transform: translate(-50%, -50%);
+}
+#cursor .inner {
+  animation: rotate 10s infinite linear;
+}
+@keyframes rotate {
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+  100% {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
 }
