--- a/css/common.css
+++ b/css/common.css
@@ -21,6 +21,8 @@
 /* 공통 */
 
 body {
+  width: 100vw;
+  height: fit-content;
   font-family: "Pretendard", sans-serif;
   overflow-x: hidden;
 }
@@ -31,6 +33,11 @@ a {
 p {
   word-break: keep-all;
 }
+button {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+}
 
 /* 헤더 */
 
@@ -38,6 +45,7 @@ header {
   position: fixed;
   width: 100%;
   z-index: 100;
+  height: 130px;
 }
 header .black_box {
   content: "bg";
@@ -45,19 +53,19 @@ header .black_box {
   content: "bg";
   background-color: black;
   font-size: 0;
-  height: 460px;
+  /* height: 460px; */
   width: 100%;
   position: absolute;
   top: 0;
   z-index: 100;
-  transform: translateY(-460px);
+  height: 0px;
   transition: 0.5s;
 }
 .header_wrap {
+  height: 100%;
   position: relative;
   z-index: 101;
   display: flex;
-  height: 130px;
   justify-content: space-between;
   align-items: center;
   padding: 0 20px;
@@ -135,6 +143,9 @@ header .lang_box a.on {
   color: #0014ba;
   background-color: rgb(255, 255, 255);
   border: 1px solid transparent;
+}
+header .nav_btn {
+  display: none;
 }
 
 /* 푸터 */
@@ -222,4 +233,27 @@ footer .right .nav_list .depth2 a {
 }
 footer .right .nav_list .depth2 a:hover {
   color: rgba(255, 255, 255, 0.8);
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1200px) {
+  header .text > li > a {
+    margin: 0 20px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  header {
+    height: auto;
+  }
+  .header_wrap {
+    padding: 20px;
+    box-sizing: content-box;
+  }
+  header .text,
+  header .lang_box {
+    display: none;
+  }
+  header .nav_btn {
+    display: block;
+  }
 }
