feat: 메인페이지 반응형 80% 구현

--- a/css/index.css
+++ b/css/index.css
@@ -449,10 +449,16 @@
   height: 940px;
 }
 .main_section5 .bg_box {
+  top: 0;
   position: absolute;
   width: 100%;
   overflow: hidden;
   display: flex;
+}
+.main_section5 .img_box {
+  position: relative;
+  z-index: 1;
+  display: none;
 }
 .main_section5 .text_box {
   position: relative;
@@ -511,10 +517,12 @@
   background-color: #09001d;
   overflow: visible !important;
 }
+.main_section6 .container {
+  position: relative;
+}
 .main_section6 .bg_box {
   position: absolute;
   width: 100vw;
-  overflow: hidden;
   display: flex;
   transform: translateX(22vw) translateY(-106%);
   /* transform: translate(22vw, -106%); */
@@ -544,6 +552,7 @@
   margin-bottom: 30px;
 }
 .main_section6 .text_box .text {
+  width: 100vw;
   font-size: 1.5em;
   font-weight: 300;
   line-height: 1.6;
@@ -551,6 +560,8 @@
   text-align: center;
   color: #fff;
   margin-bottom: 120px;
+  padding: 0 20px;
+  box-sizing: border-box;
 }
 .main_section6 .logo_box {
   position: absolute;
@@ -784,6 +795,9 @@
   left: 0;
   transition: 0.6s;
 }
+.main_section8 .list .top {
+  margin-bottom: 20px;
+}
 .main_section8 .list .top .corp-name {
   font-size: 1.25em;
   font-weight: 600;
@@ -945,10 +959,13 @@
     display: none;
   }
   .main_section4 .text_box.mob {
+    bottom: 30px;
+    top: auto;
     display: flex;
-    transform: translateY(100vh);
+    transform: translateY(40px);
     padding: 20px;
     box-sizing: border-box;
+    opacity: 0;
   }
   .main_section4 .text_box.web {
     display: none;
@@ -967,12 +984,134 @@
   }
   .main_section4 .text_box.mob .title_fill {
     font-size: 60px;
-    -webkit-text-fill-color: #0014ba;
+    background-position: 0px 0px;
+    background-size: 500px 500px;
   }
   .main_section4 .bg_box > div {
     height: 200vh;
   }
   .main_section4 .bg_box > div img {
     height: 100%;
+  }
+  .main_section5 {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    box-sizing: border-box;
+    justify-content: center;
+    row-gap: 30px;
+  }
+  .main_section5 .text_box .sub_title {
+    font-size: 36px;
+    text-align: left;
+  }
+  .main_section5 .text_box .title {
+    font-size: 64px;
+    text-align: left;
+  }
+  .main_section5 .text_box {
+    width: 100%;
+    padding-right: 0;
+  }
+  .main_section5 .right_box {
+    width: 100%;
+    top: 0;
+  }
+  .main_section5 .right_box .text {
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+  .main_section5 .img_box {
+    display: block;
+    width: 100%;
+  }
+  .main_section5 .img_box img {
+    width: 100%;
+  }
+  .main_section6 {
+    height: 160vw;
+  }
+  .main_section6 .bg_box {
+    transform: translateX(0vw) translateY(0%);
+    clip-path: inset(0%);
+    filter: blur(20px);
+  }
+  .main_section6 .logo_box.stroke img {
+    width: 100vw;
+    padding: 20px;
+    box-sizing: border-box;
+  }
+  .main_section6 .logo_box.fill img {
+    width: 100vw;
+    padding: 20px;
+    box-sizing: border-box;
+  }
+  .main_section6 .text_box {
+    top: 116vw;
+  }
+  .main_section6 .text_box .title {
+    font-size: 44px;
+  }
+  .main_section6 .text_box .text {
+    font-size: 16px;
+  }
+  .main_section6 .logo_box {
+    top: 5vw;
+  }
+  .main_section7 li {
+    width: 100%;
+  }
+  .main_section7 .bg_box {
+    filter: brightness(0.7);
+  }
+  .main_section7 .text_box,
+  .main_section7 .group-list {
+    padding: 40px 20px;
+  }
+  .main_section8 .list {
+    flex-wrap: nowrap;
+    overflow: scroll;
+    overflow-y: hidden;
+  }
+  .main_section8 .list li {
+    min-width: 100%;
+  }
+  .main_section8 .list::-webkit-scrollbar-track {
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 10px;
+  }
+  .main_section8 .list::-webkit-scrollbar-thumb {
+    background-color: white;
+  }
+  .main_section8 {
+    height: auto;
+  }
+  .main_section8 .container {
+    padding: 120px 20px;
+  }
+  .main_section8 .text_box {
+    justify-content: space-between;
+    margin-bottom: 100px;
+  }
+  .main_section8 .list .top {
+    margin-bottom: 80px;
+  }
+  .main_section8 .list .top .corp-name {
+    font-size: 16px;
+  }
+  .main_section8 .list .top .date {
+    font-size: 16px;
+  }
+  .main_section8 .list .title {
+    font-size: 20px;
+  }
+  .main_section8 .list .text {
+    font-size: 16px;
+  }
+  footer .container {
+    padding: 40px 20px;
+  }
+  footer .left .top .logo_box img {
+    width: 10em;
   }
 }
