--- a/css/common.css
+++ b/css/common.css
@@ -21,6 +21,7 @@
 /* 공통 */
 
 body {
+  position: relative;
   width: 100vw;
   height: fit-content;
   font-family: "Pretendard", sans-serif;
@@ -37,6 +38,122 @@ button {
   background-color: transparent;
   border: none;
   padding: 0;
+}
+main {
+  width: 100vw;
+  overflow: hidden;
+}
+
+/* 모바일 네비 */
+
+.nav_mobile_con {
+  position: fixed;
+  width: 0%;
+  height: 100vh;
+  overflow: hidden;
+  display: none;
+  z-index: 999;
+}
+.nav_mobile {
+  max-width: 600px;
+  width: 100%;
+  height: 100vh;
+  background-color: #0014ba;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 101;
+  transform: translateX(100%);
+  transition: 0.5s;
+}
+.nav_mobile .head {
+  height: 60px;
+  width: 100%;
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px;
+  box-sizing: border-box;
+}
+.nav_mobile .lang_box {
+  padding: 15px 30px;
+  display: flex;
+  align-items: center;
+  background: #0014ba;
+}
+.nav_mobile .lang_box a {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #fff;
+  font-size: 1.6rem;
+  font-weight: 500;
+  line-height: 1;
+  color: #fff;
+  width: 50%;
+  height: 50px;
+}
+.nav_mobile .lang_box a.on {
+  color: #0014ba;
+  background-color: rgb(255, 255, 255);
+}
+.nav_mobile .menu_list {
+  display: flex;
+  flex-direction: column;
+}
+.nav_mobile .menu_list .depth1 > a {
+  position: relative;
+  display: block;
+  padding: 1rem 1rem;
+  color: #fff;
+  font-size: 1.1rem;
+}
+.nav_mobile .menu_list .depth1 > a::before {
+  content: "^";
+  font-size: 20px;
+  position: absolute;
+  right: 28px;
+  bottom: 19px;
+  transform: scaleX(1.7) rotateX(180deg);
+  font-weight: 200;
+}
+.nav_mobile .menu_list .depth1 > a.on::before {
+  transform: scaleX(1.7) rotateX(0deg);
+  bottom: 12px;
+}
+.nav_mobile .menu_list .depth2_list {
+  overflow: hidden;
+  transition: 0.5s;
+}
+.nav_mobile .menu_list .depth2_list:nth-child(1) {
+  height: 182px;
+}
+.nav_mobile .menu_list .depth2 > a {
+  position: relative;
+  display: block;
+  padding: 0.9rem 1rem;
+  padding-left: 1.6rem;
+  color: rgba(255, 255, 255, 0.7);
+  font-size: 1rem;
+  background-color: #001094;
+}
+.nav_mobile .menu_list .depth2:first-child > a {
+  padding-top: 1rem;
+}
+.nav_mobile .menu_list .depth2:last-child > a {
+  padding-bottom: 1rem;
+}
+.nav_mobile_con .black_box {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  background-color: black;
+  opacity: 0;
+  z-index: 100;
+  transition: 0.5s;
 }
 
 /* 헤더 */
@@ -254,6 +371,9 @@ footer .right .nav_list .depth2 a:hover {
     display: none;
   }
   header .nav_btn {
+    display: block;
+  }
+  .nav_mobile_con {
     display: block;
   }
 }
